--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-todolist-2019",
+  "name": "react-todolist-2019-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
