--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "styled-components": "^4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cp ./.env.dev ./.env && react-scripts start",
+    "build": "cp ./.env.production ./.env && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
